fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,11 @@ h1 {
 */
 
 .title {
-  margin-top: 3%;
+  margin-top: 3.5%;
+}
+
+.rmbottom {
+  margin-bottom: 0px;
 }
 
 a {
